--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -79,7 +79,7 @@
 
         .container-phrase {
             position: relative;
-            width: 65%;
+            width: 75%;
             height: 25%;
             min-height: 160px;
             display: flex;
@@ -87,57 +87,75 @@
             align-items: center;
             flex-direction: column;
 
-            .trasnlation {
-                cursor: pointer;
-                position: absolute;
+            .content-phrase {
+                width: 60%;
                 display: flex;
+                flex-direction: column;
                 justify-content: center;
-                right: 0;
-                top: 0;
-                margin-top: -35px;
-                margin-right: -35px;
-                background-color: transparent;
-                border: 1px solid #d3cccc;
-                padding: 5px;
-                border-radius: 50%;
-                box-shadow: 2px 2px 3px -1px #000;
-                transition: all ease-in-out var(--transition-time);
+                align-items: center;
 
-                svg {
+                .phrase {
+                    position: relative;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 5px;
+                    width: 90%;
+                    padding-top: 10px;
                     transition: all ease-in-out var(--transition-time);
-                }
 
-                &:hover {
-                    box-shadow: 1px 1px 5px -2px #fff;
-                    background-color: #d3cccc;
-                    
-                    svg {
-                        stroke: #4907b3;
+                    .text {
+                        width: 100%;
+                        transition: all ease-in-out var(--transition-time);
+                        font-size: 1.5em;
+                        text-align: center;
+                        opacity: 0;
+                    }
+
+                    .translation {
+                        cursor: pointer;
+                        position: absolute;
+                        display: flex;
+                        justify-content: center;
+                        right: 0;
+                        top: 0;
+                        margin-top: -35px;
+                        margin-right: -35px;
+                        background-color: transparent;
+                        border: 1px solid #d3cccc;
+                        padding: 5px;
+                        border-radius: 50%;
+                        box-shadow: 2px 2px 3px -1px #000;
+                        transition: all ease-in-out var(--transition-time);
+        
+                        svg {
+                            transition: all ease-in-out var(--transition-time);
+                        }
+        
+                        &:hover {
+                            box-shadow: 1px 1px 5px -2px #fff;
+                            background-color: #d3cccc;
+                            
+                            svg {
+                                stroke: #4907b3;
+                            }
+                        }
                     }
                 }
             }
 
-            .phrase {
-                display: flex;
-                flex-direction: column;
-                gap: 5px;
-                width: 100%;
-                text-align: center;
-                font-size: 1.4em;
-            }
-
             .process-container {
+                position: relative;
                 margin: 0 auto;
                 margin-top: 25px;
                 margin-bottom: 25px;
-                width: 50%;
+                width: 100%;
                 height: 2px;
 
                 .process {
                     height: 100%;
                     border-radius: 2px;
                     background-color: #d3cccc;
-                    transition: all linear 0.3s;
+                    transition: all linear 0.05s;
                 }
             }
 
@@ -191,4 +209,8 @@
             }
         }
     }
+}
+
+.show {
+    opacity: 1 !important;
 }
