--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -88,7 +88,7 @@
             flex-direction: column;
 
             .content-phrase {
-                width: 60%;
+                width: 70%;
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
@@ -99,7 +99,7 @@
                     display: flex;
                     flex-direction: column;
                     gap: 5px;
-                    width: 90%;
+                    width: 100%;
                     padding-top: 10px;
                     transition: all ease-in-out var(--transition-time);
 
@@ -215,4 +215,10 @@
 
 .show {
     opacity: 1 !important;
+}
+
+@media screen and (max-width: 640px) {
+    .container-phrase {
+        width: 100% !important;
+    }
 }
