--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,15 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap');
 
+:root {
+    --transition-time: 0.4s;
+    --white-color: #d3cccc;
+    --purple-color: #4100a8;
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Nunito";
-    color: #d3cccc;
-}
-
-:root {
-    --transition-time: 0.4s;
+    color: var(--white-color);
 }
 
 ::-webkit-scrollbar {
@@ -17,17 +19,17 @@
 }
 
 ::-webkit-scrollbar-track {
-    background-color: #4100a8;
+    background-color: var(--purple-color);
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #d3cccc;
+    background-color: var(--white-color);
     border-radius: 20px;
-    border: 2px solid #4100a8;
+    border: 2px solid var(--purple-color);
 }
 
 .app {
-    background-image: linear-gradient(130deg, #050225, #0c035c, #4100a8, #4907b3);
+    background-image: linear-gradient(130deg, #050225, #0c035c, var(--purple-color), #4907b3);
 
     header {
         display: flex;
@@ -61,11 +63,21 @@
             font-size: 0.9em;
 
             .repo {
-                border-bottom: 1.5px solid transparent;
-                transition: border-color ease-in-out var(--transition-time);
+                display: grid;
+                place-content: center;
+                padding: 6.5px;
+                transition: all ease-in-out var(--transition-time);
+                border-radius: 999px;
+                outline: none;
+
+                svg {
+                    transition: all ease-in-out var(--transition-time);
+                }
 
                 &:hover {
-                    border-color: #d3cccc;
+                    & svg {
+                        scale: 1.2;
+                    }
                 }
             }
         }
@@ -121,11 +133,11 @@
                         margin-top: -35px;
                         margin-right: -35px;
                         background-color: transparent;
-                        border: 1px solid #d3cccc;
+                        border: 1px solid var(--white-color);
                         padding: 5px;
                         border-radius: 50%;
-                        box-shadow: 2px 2px 3px -1px #000;
                         transition: all ease-in-out var(--transition-time);
+                        outline: none;
         
                         svg {
                             transition: all ease-in-out var(--transition-time);
@@ -133,7 +145,7 @@
         
                         &:hover {
                             box-shadow: 1px 1px 5px -2px #fff;
-                            background-color: #d3cccc;
+                            background-color: var(--white-color);
                             
                             svg {
                                 stroke: #4907b3;
@@ -154,7 +166,7 @@
                 .process {
                     height: 100%;
                     border-radius: 2px;
-                    background-color: #d3cccc;
+                    background-color: var(--white-color);
                     transition: all linear 0.05s;
                 }
             }
@@ -168,7 +180,7 @@
                     align-items: center;
                     gap: 5px;
                     padding: 7px 14px;
-                    border: 1px solid #d3cccc;
+                    border: 1px solid var(--white-color);
                     border-radius: 4px;
                     transition: all ease-in-out var(--transition-time);
 
@@ -179,9 +191,9 @@
 
                 &:has(.pc-content) {
                     p:hover {
-                        background-color: #d3cccc;
+                        background-color: var(--white-color);
                         color: #4907b3;
-                        box-shadow: 1px 1px 6px -2px #d3cccc;
+                        box-shadow: 1px 1px 6px -2px var(--white-color);
     
                         svg {
                             stroke: #4907b3;
