--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -84,7 +84,7 @@
     }
 
     main {
-        height: 100vh;
+        min-height: 100vh;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -173,6 +173,7 @@
 
             .controls {
                 cursor: default;
+                width: 165px;
 
                 p {
                     display: flex;
